# ros-tracked-ugv-autonomy-stack

./: .gitignore
maps/: map0217.pgm  map0217.yaml  map0225.yaml  map0225c.yaml  map0320.yaml  map0327.yaml  map21.yaml
src/can_send/: CMakeLists.txt  README.md  package.xml
src/can_send/config/: pid_params.yaml
src/can_send/launch/: can_send.launch
src/can_send/src/: cansend_node.cpp
src/global_plan_transformer/: CMakeLists.txt  package.xml  trajectory_tracking.launch
src/global_plan_transformer/src/: global_plan_transformer.cpp
src/map_to_odom/: CMakeLists.txt  package.xml
src/map_to_odom/launch/: map_to_odom.launch  map_to_odom_2.launch
src/map_to_odom/src/: map_to_odom.cpp  map_to_odom_2.cpp
src/navigation/map/: map1.yaml
src/navigation/move_base/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  global_costmap_params_2.yaml  local_costmap_params.yaml  move_base_params.yaml  move_base_params_2.yaml  teb_local_planner_params.yaml
src/navigation/move_base/config_811/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
src/navigation/move_base/launch/: move_base.launch  move_base_2.launch  move_base_3.launch
src/pointcloud_to_laserscan/launch/: point_to_scan.launch
src/radar/ars548_ros-noetic/ars548_driver/include/ars548_driver/: ars548_driver.hpp
src/radar/ars548_ros-noetic/ars548_driver/launch/: ars548_launch.launch
src/radar/ars548_ros-noetic/ars548_messages/msg/: ObjectList.msg
src/radar/obstacle_avoidance/: CMakeLists.txt  package.xml
src/radar/obstacle_avoidance/msg/: Obstacle.msg  ObstacleArray.msg
src/radar/obstacle_avoidance/src/: obstacle_node.cpp  pointcloud_to_objectlist_node.cpp
src/relative_odom_tf/: CMakeLists.txt  package.xml
src/relative_odom_tf/launch/: relative_odom_tf.launch  relative_odom_tf_2.launch
src/relative_odom_tf/src/: relativeOdometry_zyf.cpp  relativeOdometry_zyf_2.cpp
src/rslidar_sdk/config/: config.yaml
src/rslidar_sdk/rviz/: rviz.rviz
src/scout_base/scout_bringup/launch/: gmapping.launch  navigation_4wd.launch  open_rslidar.launch  rtabmapping.launch  rtabmapping_localization.launch  scout_cartographer.launch  scout_rtab_navigation.launch
src/scout_base/scout_description/maps/: map0218.yaml  map0219.yaml  map02192.yaml  map0225.yaml  map0225c.yaml  map0327.pgm  map108.yaml  map1230.yaml  map21.yaml  map_0812.pgm  map_0812.yaml
src/scout_base/scout_description/param/4wd/: 1base_local_planner_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/scout_base/scout_description/rviz/: mapping.rviz
src/scout_base/scout_description/urdf/: scout_mini2.urdf
src/serialpkg/: CMakeLists.txt  package.xml
src/serialpkg/src/: serial_port_node.cpp
src/trajectory_tracking/: CMakeLists.txt  package.xml
src/trajectory_tracking/launch/: trajectory_tracking.launch
src/trajectory_tracking/src/: trajectory_track.cpp
