<package>
  <name>map_to_odom</name>
  <version>0.0.1</version>
  <description>map_to_odom is a package to generate relative odom and tf data of vehicle frame in map frame.</description>
  <maintainer email="lizw_0304@163.com">Hongbiao Zhu</maintainer>
  <license>BSD</license>

  <author> Lee </author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>

</package>
